assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
}

body{
    overflow-x: hidden;
}

.container{
    position: relative;
    width: 100vw;
    font-family: 'Montserrat', sans-serif;
    background-color: #fff;
    display: flex;
    flex-direction: column;
}

.bg{
    background: linear-gradient(68.15deg, #4B9CF9 16.62%, #E8F3FE 85.61%);
    padding: 25px;
    height: 82vh;
}

/* ********** HEADER ********** */

header{
    display: flex;
    justify-content: space-around;
    /* padding-top: 50px; */
    height: 10vh;
    /* margin-top: -25px; */
    font-size: 2.4rem;
    font-weight: 500;
}

@keyframes navLinkFade {
    from {
      opacity: 0;
      transform: translateX(50px);
    }
    to {
      opacity: 1;
      transform: translateX(0);
    }
}

.mobile-menu {
    display: none;
    cursor: pointer;
}

.mobile-menu.active .line1 {
    transform: rotate(-45deg) translate(-8px, 8px);
}
  
.mobile-menu.active .line2 {
    opacity: 0;
}
  
.mobile-menu.active .line3 {
    transform: rotate(45deg) translate(-5px, -7px);
}
  
.mobile-menu div {
    width: 32px;
    height: 2px;
    background: #000;
    margin: 8px;
    transition: 0.3s;
}

.nav-list.active {
    transform: translateX(0);
}

.nav-list ul{
    display: flex;
    gap: 35px;
}

.nav-list ul li{
    list-style: none;
}

.nav-list ul li a{
    color: #000;
}

.nav-list ul li a:hover{
    text-decoration: underline;
}

/* ********** PRESANTATION ********** */


.group{
    display: flex;
    max-width: 1100px;
    margin: auto;
    margin-top: 155px;
    gap: 55px;
}

.group img{
    width: 250px;
    border-radius: 10px;
}

.group h1{
    font-size: 3.5rem;
    letter-spacing: 1.2px;
}

.group p{
    font-size: 1.9rem;
    margin-top: 25px;
}

.social-media{
    max-width: 900px;
    margin: auto;
    margin-top: 85px;
}

.social-media ul{
    display: flex;
    gap: 45px;
    justify-content: space-around;
}

.social-media ul li{
    list-style: none;
}

.social-media ul li a img{
    width: 55px;
}


/* ********** ABILITIES ********** */

#abilities{
    height: 70vh;
}

.title{
    margin-top: 50px;
    margin-bottom: 75px;
    font-size: 2.8rem;
    letter-spacing: 1.2px;
    position: relative;
    left: 9%;
}

.stacks{
    display: grid;
    grid-template-columns: auto auto auto;
    grid-template-rows: auto auto auto;
    column-gap: 100px;
    max-width: 1200px;
    height: 50vh;
    margin: auto;
    margin-top: -5px;
}

.tec{
    display: flex;
    gap: 15px;
}

.tec img{
    margin-bottom: 75px;
    width: 75px;
}

.tec div .tec-name{
    font-size: 25px;
    font-weight: 500;
    color: #0F3375;
}

/* ********** PROJETOS ********** */


#projects{
    height: 120vh;
    background: linear-gradient(68.15deg, #4B9CF9 16.62%, #E8F3FE 85.61%);
}

#projects h1{
    padding-top: 25px;
}

.projects-container{
    max-width: 1100px;
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto;
    column-gap: 50px;
    row-gap: 50px;
    margin: auto;
    margin-top: -65px;
}

.project h1{
    font-size: 2rem;
}

.project{
    max-width: 450px;
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.project p{
    font-size: 1.2rem;
    font-weight: 500;
}

.project p a{
    color: #0F3375;
    text-decoration: underline;
}

.project img{
    width: 450px;
    border-radius: 10px;

}

/* ********** ABOUTME ********** */

#aboutMe{
    height: 30vh;
}

#aboutMe div{
    position: relative;
    left: -35px;
    display: flex;
    gap: 10px;
    max-width: 1100px;
    margin: auto;
    margin-top: -50px;
}

#aboutMe div p{
    font-size: 1.5rem;
}

#aboutMe div a{
    height: 75px;
    width: 170px;
    margin-top: 22px;
    padding: 10px 20px;
    font-size: 22px;
    border-radius: 5px;
    text-decoration: none;
    color: white;
    background-color:#1557C0;
    border: 1px solid #2382F7;
    border-left: 10px solid #2382F7;
    transition: all 0.25s ease-in-out;
}

#aboutMe div a:hover{
    background-color: #fff;
    color: #1557C0;
}

/* ********** FOOTER ********** */

footer{
    height: 30vh;
}

.title-footer{
    margin-top: 50px;
    margin-bottom: 75px;
    font-size: 2rem;
    letter-spacing: 1.2px;
    position: relative;
    left: 9%;
}

footer nav{
    max-width: 1000px;
    margin: auto;
    margin-top: -20px;
}

footer nav ul{
    display: flex;
    gap: 20px;
    font-size: 1.8rem;
}

footer nav ul li{
    list-style-type: none;
    
}

footer nav ul li a{
    text-decoration: none;
    color: #000;
}

footer nav ul li a:hover{
    text-decoration: underline;
}

@media (max-width: 1200px){
    
    /* ****** MENU HAMB****** */
    .nav-list{
        position: absolute;
        top: 8vh;
        right: 0;
        width: 100vw;
        height: 90vh;
        background: linear-gradient(68.15deg, #4B9CF9 16.62%, #E8F3FE 85.61%);
        flex-direction: column;
        align-items: center;
        justify-content: space-around;
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
        z-index: 1;
    }

    .nav-list ul{
        flex-direction: column;
        align-items: center;
        justify-content: space-around;
        margin-top: 100px;
        gap: 55px;
    }

    .nav-list ul li{
        margin-left: 0;
        opacity: 0;
    }

    .mobile-menu {
        display: block;
    }

    /* ****** PRESANTATION ****** */

    .group{
        flex-direction: column-reverse;
        align-items: center;
        margin-top: 20px;
        max-width: 75%;
    }

    .group img{
        width: 170px;
    }

    .group h1{
        font-size: 2.5rem;
    }

    .group p{
        font-size: 1.5rem;
    }

    .social-media{
        max-width: 80%;
    }

    .social-media ul{
        gap: 0px;
    }

    /* ****** ABILITIES ****** */

    #abilities{
        height: 55vh;
    }
    
    .stacks{
        grid-template-columns: auto auto;
        grid-template-rows: auto auto;
        max-width: 75%;
        overflow-y: scroll;
        height: 45vh;
        column-gap: 50px;
        row-gap: 15px;
        margin-top: -33px;
    }

    /* ****** PROJECTS ****** */

    #projects{
        height: 100vh;
    }
    
    .projects-container{
        grid-template-columns: auto;
        grid-template-rows: auto;
        max-width: 70%;
        height: 90vh;
        overflow-y: scroll;
    }

    .project{
        margin: auto;
        max-width: 90%;
    }

    .project img{
        width: 390px;
        margin: auto;
    }

    /* ****** ABOUT ****** */

    #aboutMe div{
        max-width: 75%;
    }

    #aboutMe div p{
        font-size: 1.3rem;
    }

    /* ****** FOOTER ****** */

    .title-footer{
        font-size: 1.7rem;
    }

    footer nav{
        max-width: 65%;
    }

    footer nav ul{
        font-size: 1.4rem;
        gap: 10px;
    }

}

@media (max-width: 950px){
    .bg{
        height: 87vh;
    }

    /* ****** aboutMe ****** */
    
    #aboutMe div{
        gap: 18px;
    }
    
    #aboutMe h1{
        font-size: 38px;
    }

    #aboutMe div p{
        font-size: 18px;
    }
}

@media (max-width: 750px){
    /* ****** Presantation ****** */
    
    .bg{
        height: 80vh;
    }
    
    .group{
        gap: 25px;
    }
    
    .div-description h1{
        font-size: 26px;
    }

    .div-description p{
        font-size: 20px;
    }

    .social-media{
        margin-top: 55px;
    }

    /* ****** Abilities ****** */

    .stacks{
        column-gap: 20px;
    }
    
    .tec img{
        width: 55px;
    }
    
    .tec-name{
        font-size: 20px;
    }

    .tec-desc{
        font-size: 15px;
    }
    
    /* ****** Projetos ****** */

    .project h1{
        font-size: 24px;
    }

    .project p{
        font-size: 18px;
    }

    /* ****** aboutMe ****** */

    #aboutMe div a{
        height: 65px;
        width: 160px;
        font-size: 18px;
    }

    /* ****** Footer ****** */

    footer nav ul{
        font-size: 20px;
    }
}

@media (max-width: 670px){
    /* ****** Projetos ****** */

    .project{
        max-width: 95%;
    }

    .project p{
        font-size: 16px;
    }

    .project img{
        width: 100%;
    }

    /* ****** aboutMe ****** */

    #aboutMe div{
        flex-direction: column;
        gap: 0;
    }
    
    #aboutMe div p{
        font-size: 16px;
    }

    /* ****** Footer ****** */
    footer nav ul{
        font-size: 16px;
    }
}

@media (max-width: 550px){
    /* ****** Presantation ****** */

    .social-media ul li a img{
        width: 40px;
    }

    /* ****** Abilities ****** */
    
    .stacks{
        grid-template-columns: auto;
        grid-template-rows: auto;
        row-gap: 0;
    }

    .tec img{
        width: 65px;
    }

    /* ****** Footer ****** */

    footer{
        margin-top: 20px;
    }

    footer nav{
        max-width: 90%;
    }
}

@media (max-width: 460px){
    footer{
        margin-top: 20%;
    }

    .title-footer{
        font-size: 22px;
    }

    footer nav ul{
        flex-direction: column;
    }

    footer nav ul li{
        align-self: center;
    }
}

@media (max-width: 400px){
    
    .bg{
        height: 84vh;
    }
    
    /* ****** Presantation ****** */
    .div-description h1{
        font-size: 26px;
    }

    .div-description p{
        font-size: 18px;
        align-self: center;
    }

    .social-media{
        margin-top: 35px;
        max-width: 95%;
    }

    .social-media ul{
        gap: 0;
    }

    /* ****** Abilities ****** */

    .tec img{
        width: 40px;
    }
    
    .tec-name{
        font-size: 18px;
    }

    .tec-desc{
        font-size: 15px;
    }

    /* ****** Project ****** */

    #projects{
        height: 103vh;
    }

    .title{
        font-size: 33px;
    }

    /* ****** Footer ****** */

    footer{
        margin-top: 35%;
    }

    #aboutMe div{
        
    }
}

@media (max-width: 380px){
    .bg{
        height: 103vh;
    }

    footer{
        margin-top: 45%;
    }
}

